# midimaster

./: .gitignore  CLAUDE.md  README.md  desktop.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backend/: package.json
backend/src/: index.ts  mdns.ts  midi-manager.ts  surface-manager.ts  types.ts
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  style.css  ws-manager.ts
frontend/src/pages/: Overview.tsx
src/: desktop.tsx  server-url.ts  state.ts  style.css  types.ts  ws-manager.ts  ws.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: settings.yaml
src-tauri/config/surfaces/: drums.yaml  mixer.yaml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/backend/: mdns.rs  midi.rs  mod.rs  server.rs  surfaces.rs  te_virtual_midi.rs  types.rs
src/components/: CopyBtn.tsx  UpdateBanner.css  UpdateBanner.tsx
src/pages/: DesktopApp.css  DesktopApp.tsx  Overview.tsx  Surface.tsx
